--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -7,7 +7,7 @@
     return;
 }
 
-<div class="c-section">
+<div class="c-section" style="display:none;">
     <div class="l-mainstage">
         <div class="l-mainstage__wrap">
             <div class="l-mainstage__content">
@@ -533,8 +533,8 @@
                 let opts = {
                     template: '#uid-template-newslist',
                     criterias: [
-                        { field: 'CategoryPair.Value', ele: '#uid-criteria-category :checkbox' },
-                        { field: 'CategoryPair.Value', ele: '#uid-criteria-category :checkbox', all: 'all', selector: ':not(:checked)' },
+                        //{ field: 'CategoryPair.Value', ele: '#uid-criteria-category :checkbox' },
+                        //{ field: 'CategoryPair.Value', ele: '#uid-criteria-category :checkbox', all: 'all', selector: ':not(:checked)' },
                         //{ field: 'SharpeRatioMarketPriceRisk.Value', ele: '[data-slider-val="sharpe"]', type: 'range', delimiter: ',' },
                     ],
                     search: {
