Update：最新消息列表

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -677,12 +677,12 @@
 
             window.NewsList = {
                 ApiRequest: function () {
-                    //var token = $('input[name="__RequestVerificationToken"]').val();
+                    var token = $('input[name="__RequestVerificationToken"]').val();
                     var reqSearch = {
                         req: {
                             DatasourceId: '@Model.DatasourceId'
                         },
-                        //__RequestVerificationToken: token
+                        __RequestVerificationToken: token
                     };
 
                     $.ajax({
