--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_ScaleHistory.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_ScaleHistory.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Feature.Wealth.Component.Models.ETF.Detail.EtfDetailModel
-@using Feature.Wealth.Component.Models.ETF.Detail;
 @using Foundation.Wealth.Helper;
 @*規模變動*@
 <div class="c-tab__panel" data-tab-panel-id="tab-9">
@@ -7,7 +6,7 @@
         <div class="c-section__content" data-chart="scale">
             <div class="c-empty">
                 <div class="c-empty__img">
-                    <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
+                    <img src="~/themes/images/lions/lion-keyword.svg" alt="">
                 </div>
                 <div class="c-empty__desc">沒有資料</div>
             </div>
